[tool.poetry]
name = "OptCAT"
version = "0.1.0"
description = "OptCAT (= Optuna + CatBoost) provides a scikit-learn compatible estimator that tunes hyperparameters in CatBoost with Optuna."
authors = ["wakame1367 <hotwater1367@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/wakamezake/OptCAT"
keywords = ["catboost", "optuna", "hyperparameter tuning"]

[tool.poetry.dependencies]
python = ">=3.6.1"
catboost = "^0.22"
scikit-learn = "^0.22.2"
pandas = "^1.0.2"
optuna = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "*"
pre-commit = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
