[aliases]
test = pytest

[flake8]
doctests = True
max-complexity = 10

[metadata]
author = Kon
description = A template for Python packages
license = MIT License
long_description = file: README.md
long_description_content_type = text/markdown
name = awesome-package

[mypy]
disallow_untyped_defs = True
ignore_missing_imports = True

[options]
include_package_data = True
install_requires = numpy
packages = find:
python_requires = >=3.5
setup_requires =
    pytest-runner
    setuptools_scm
tests_require =
  pytest
  pytest-flake8
  pytest-mypy
  pytest-pydocstyle>=2.0.0

[options.packages.find]
exclude = tests

[pydocstyle]
convention = numpy

[tool:pytest]
addopts =
    --doctest-modules
    --flake8
    --mypy
    --pydocstyle
